CMF-1708/HLS-Teste1/CMFteste1/solution1/solution1.log
==============================================================
File generated on Mon Aug 17 14:58:19 -0300 2020
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.3 (64-bit)
SW Build 2405991 on Thu Dec  6 23:38:27 MST 2018
IP Build 2404404 on Fri Dec  7 01:43:56 MST 2018
Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xa7a12tcsg325-1q'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'CMFteste1.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from CMFteste1.cpp:1:
In file included from CMFteste1.cpp:1:
./CMFteste1.h:18:82: error: expected ';' after top level declarator
void CMFteste1(data_t Entrada1, data_t Entrada2, data_t *Saida1, data_t *Saida2 )
                                                                                 ^
                                                                                 ;
1 error generated.
==============================================================
File generated on Mon Aug 17 15:00:45 -0300 2020
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.3 (64-bit)
SW Build 2405991 on Thu Dec  6 23:38:27 MST 2018
IP Build 2404404 on Fri Dec  7 01:43:56 MST 2018
Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xa7a12tcsg325-1q'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'CMFteste1.cpp' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:01 ; elapsed = 00:00:47 . Memory (MB): peak = 101.625 ; gain = 17.020
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:01 ; elapsed = 00:00:47 . Memory (MB): peak = 101.625 ; gain = 17.020
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:01 ; elapsed = 00:00:58 . Memory (MB): peak = 110.609 ; gain = 26.004
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:00:01 ; elapsed = 00:00:59 . Memory (MB): peak = 115.918 ; gain = 31.313
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:00:01 ; elapsed = 00:01:01 . Memory (MB): peak = 141.563 ; gain = 56.957
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:00:02 ; elapsed = 00:01:02 . Memory (MB): peak = 143.137 ; gain = 58.531
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'CMFteste1' ...
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'CMFteste1' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 64.336 seconds; current allocated memory: 93.496 MB.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 1.196 seconds; current allocated memory: 93.572 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'CMFteste1' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on port 'CMFteste1/Entrada1_V' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on port 'CMFteste1/Entrada2_V' to 'ap_none'.
INFO: [RTGEN 206-500] Setting interface mode on port 'CMFteste1/Saida1_V' to 'ap_vld'.
INFO: [RTGEN 206-500] Setting interface mode on port 'CMFteste1/Saida2_V' to 'ap_vld'.
INFO: [RTGEN 206-500] Setting interface mode on function 'CMFteste1' to 'ap_ctrl_hs'.
INFO: [RTGEN 206-100] Finished creating RTL model for 'CMFteste1'.
INFO: [HLS 200-111]  Elapsed time: 1.207 seconds; current allocated memory: 93.720 MB.
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:00:03 ; elapsed = 00:01:18 . Memory (MB): peak = 143.137 ; gain = 58.531
INFO: [SYSC 207-301] Generating SystemC RTL for CMFteste1.
INFO: [VHDL 208-304] Generating VHDL RTL for CMFteste1.
INFO: [VLOG 209-307] Generating Verilog RTL for CMFteste1.
INFO: [HLS 200-112] Total elapsed time: 78.254 seconds; peak allocated memory: 93.720 MB.
